# aoc2024

./: .pre-commit-config.yaml  Cargo.toml  shell.nix
benches/: bench.rs
src/: lib.rs  util.rs
