[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[[bench]]
name = "bench"
harness = false

[dependencies]
itertools = "0.13.0"

[dev-dependencies]
criterion = "0.5.1"
